--- a/src/FindTeammates.css
+++ b/src/FindTeammates.css
@@ -1,11 +1,13 @@
 .find-teammates-container {
-  width: 80%;
+  width: 100%;
   margin: auto;
   padding: 20px;
   background: #000000;
   color: white;
   border-radius: 10px;
   text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .find-teammates-container input {
